<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/llContent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:text="@string/profile"
        android:gravity="center_vertical"
        style="@style/NavigationMenuSubheaderStyle"
        android:paddingRight="@dimen/nav_margin"/>
    <by.torymo.navigationmenuitem.NavigationMenuItem
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:id="@+id/nav_basic"
        app:navItemText="@string/basic"
        app:navItemIcon="@drawable/ic_basic"
        app:navItemIconTint="@color/colorPrimary"
        app:navItemCheckable="true"
        app:navCheckedItemTextColor="@color/colorPrimary"/>
    <by.torymo.navigationmenuitem.NavigationMenuItem
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:id="@+id/nav_driver"
        app:navItemText="@string/driver"
        app:navItemIcon="@drawable/ic_auto"
        app:navItemIconTint="@color/colorPrimary"
        app:navItemCheckable="true"
        app:navCheckedItemTextColor="@color/colorPrimary"/>
    <by.torymo.navigationmenuitem.NavigationMenuItem
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:id="@+id/nav_country"
        app:navItemText="@string/country"
        app:navItemIcon="@drawable/ic_dach"
        app:navItemIconTint="@color/colorPrimary"
        app:navItemCheckable="true"
        app:navCheckedItemTextColor="@color/colorPrimary"/>
    <by.torymo.navigationmenuitem.NavigationMenuItem
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:id="@+id/nav_fisher"
        app:navItemText="@string/fisher"
        app:navItemIcon="@drawable/ic_fisher"
        app:navItemIconTint="@color/colorPrimary"
        app:navItemCheckable="true"
        app:navCheckedItemTextColor="@color/colorPrimary"/>
    <by.torymo.navigationmenuitem.NavigationMenuItem
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:id="@+id/nav_tourist"
        app:navItemText="@string/tourist"
        app:navItemIcon="@drawable/ic_tourist"
        app:navItemIconTint="@color/colorPrimary"
        app:navItemCheckable="true"
        app:navCheckedItemTextColor="@color/colorPrimary"/>
    <by.torymo.navigationmenuitem.NavigationMenuItem
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:id="@+id/nav_ecologist"
        app:navItemText="@string/ecologist"
        app:navItemIcon="@drawable/ic_ecologist"
        app:navItemIconTint="@color/colorPrimary"
        app:navItemCheckable="true"
        app:navCheckedItemTextColor="@color/colorPrimary"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_separator_height"
        android:background="@color/colorAccent"
        android:layout_marginTop="@dimen/nav_separator_margin"
        android:layout_marginBottom="@dimen/nav_separator_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:text="@string/other"
        android:gravity="center_vertical"
        style="@style/NavigationMenuSubheaderStyle"/>
    <by.torymo.navigationmenuitem.NavigationMenuItem
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:id="@+id/nav_settings"
        app:navItemText="@string/settings"
        app:navItemIcon="@drawable/ic_settings"
        app:navItemIconTint="@color/colorPrimary"/>
    <by.torymo.navigationmenuitem.NavigationMenuItem
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_line_height"
        android:id="@+id/nav_warning"
        app:navItemText="@string/warning"
        app:navItemIcon="@drawable/ic_warning"
        app:navItemIconTint="@color/colorPrimary"/>
</LinearLayout>